ui/fail/value/bad_as_ref.stderr
error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> $DIR/bad_as_ref.rs:9:5
   |
6  |     let v2 = v.as_ref()
   |              ---------- immutable borrow occurs here
...
9  |     v.borrow_mut::<i32>();
   |     ^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
10 |
11 |     println!("{:p}", v2);
   |                      -- immutable borrow later used here
